--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+
+
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
@@ -12,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ejemplo_retrofit2"
         tools:targetApi="31">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAdA5uhVGD5hvp8_Q9nufGl7J44qGDErM4"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
